--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.1",
     "express-session": "^1.18.0",
     "http-errors": "~1.6.3",
+    "js-search": "^2.0.1",
     "mongodb": "^6.7.0",
     "morgan": "~1.9.1",
     "nodemon": "^3.1.3"
